syntax = "proto3";
package user;

option go_package = "github.com/SMTP_authorization/pkg/service/grpc/user;user";


// AUTH
message SignUpRequest {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    string phone = 5;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message UserResponse {
    int32 code = 1;
    string message = 2;
    User user = 3;
}


/** 
* Company USER
**/

message UserGetByEmailRequest {
    string email = 1;
}

message UserGetByIdRequest {
    string id = 1;
}

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string secondName = 4;
    string phone = 5;
    string email = 6;
    string avatar = 7;
    Role role = 8;
}


message UsersGetResponse {
    int32 code = 1;
    string message = 2;
    repeated User users = 3;
}

message UserUpdateRequest {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string secondName = 4;
    string phone = 5;
}

message UserRoleUpdateRequest {
    string id = 1;
    string roleID = 2;
}

message UserAvatarUpdateRequest {
    string id = 1;
    string avatar = 2;
}

message UserChangePasswordRequest {
    string id = 1;
    string password = 2;
}


// ROLE
message Role {
    string id = 1;
    string name = 2;
}

message RoleCreateRequest {
    string name = 1;
}

message RoleResponse {
    int32 code = 1;
    string message = 2;
    Role Role = 3;
}

message RoleGetRequest {
    string id = 1;
}

message RolesGetRequest {
}

message RolesGetResponse {
    int32 code = 1;
    string message = 2;

    repeated Role Roles = 3;
}

message RoleGetByNameRequest {
    string name = 1;
}

message RoleUpdateRequest {
    string id = 1;
    string name = 2;
}

service UserService {
    // auth
    rpc SignUp(SignUpRequest) returns (UserResponse) {}
    rpc SignIn(SignInRequest) returns (UserResponse) {}
    // company user
    rpc GetUserByEmail(UserGetByEmailRequest) returns (UserResponse) {}
    rpc GetUserById(UserGetByIdRequest) returns (UserResponse) {}
    rpc UpdateUser(UserUpdateRequest) returns (UserResponse) {}
    rpc UpdateUserRole(UserRoleUpdateRequest) returns (UserResponse) {}
    rpc UpdateUserAvatar(UserAvatarUpdateRequest) returns (UserResponse) {}
    rpc ChangePassword(UserChangePasswordRequest) returns (UserResponse) {}
    //role
    rpc CreateRole(RoleCreateRequest) returns (RoleResponse) {}
    rpc GetRole(RoleGetRequest) returns (RoleResponse) {}
    rpc GetRoleByName(RoleGetByNameRequest) returns (RoleResponse) {}
    rpc GetRoles(RolesGetRequest) returns (RolesGetResponse) {}
    rpc UpdateRole(RoleUpdateRequest) returns (RoleResponse) {}
}